// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .cache-1rsi7c-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1rsi7c-RadioContainer[aria-disabled='false'],
.cache-1rsi7c-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-2eympe-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-2eympe-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-2eympe-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-2eympe-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-2eympe-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-1rsi7c-RadioContainer ehkrmld0"
    data-checked="false"
  >
    <input
      aria-disabled="false"
      aria-invalid="false"
      class="cache-2eympe-RadioInput ehkrmld1"
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-j51tvx-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-u6wkt9-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-1rsi7c-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1rsi7c-RadioContainer[aria-disabled='false'],
.cache-1rsi7c-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-2eympe-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-2eympe-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-2eympe-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-2eympe-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-2eympe-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-1rsi7c-RadioContainer ehkrmld0"
    data-checked="true"
  >
    <input
      aria-disabled="false"
      aria-invalid="false"
      checked=""
      class="cache-2eympe-RadioInput ehkrmld1"
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-j51tvx-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-u6wkt9-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1rsi7c-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1rsi7c-RadioContainer[aria-disabled='false'],
.cache-1rsi7c-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-2eympe-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-2eympe-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-2eympe-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-2eympe-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-2eympe-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    aria-disabled="true"
    class="cache-1rsi7c-RadioContainer ehkrmld0"
    data-checked="false"
  >
    <input
      aria-disabled="true"
      aria-invalid="false"
      class="cache-2eympe-RadioInput ehkrmld1"
      disabled=""
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-j51tvx-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-u6wkt9-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when error 1`] = `
<DocumentFragment>
  .cache-1rsi7c-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1rsi7c-RadioContainer[aria-disabled='false'],
.cache-1rsi7c-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-2eympe-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-2eympe-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-2eympe-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-2eympe-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-2eympe-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    aria-disabled="false"
    class="cache-1rsi7c-RadioContainer ehkrmld0"
    data-checked="false"
    data-error="Invalid value"
  >
    <input
      aria-disabled="false"
      aria-invalid="true"
      class="cache-2eympe-RadioInput ehkrmld1"
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-j51tvx-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-u6wkt9-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders without name 1`] = `
<DocumentFragment>
  .cache-1rsi7c-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1rsi7c-RadioContainer[aria-disabled='false'],
.cache-1rsi7c-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-1rsi7c-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-1rsi7c-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-2eympe-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-2eympe-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-2eympe-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-2eympe-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-2eympe-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-2eympe-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe3ed;
  fill: #b3144d;
}

.cache-2eympe-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe3ed;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    aria-disabled="true"
    class="cache-1rsi7c-RadioContainer ehkrmld0"
    data-checked="false"
  >
    <input
      aria-disabled="true"
      aria-invalid="false"
      class="cache-2eympe-RadioInput ehkrmld1"
      disabled=""
      id=":r2:-choice"
      name=":r2:"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-j51tvx-StyledIcon ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="8"
          stroke-width="2"
        />
        <circle
          class="cache-u6wkt9-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="6"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="4"
        />
      </g>
    </svg>
    <label
      for=":r2:-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;
